--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,36 @@
 /*font-family: 'Nunito Sans', sans-serif;*/
 /*font-family: 'Open Sans', sans-serif;*/
 
-body {
-    font-family: 'Nunito Sans', sans-serif;
+:root {
+    --bg-lightcolor: #ffffff;
+    --bg-darkcolor: rgba(40, 39, 44, 1);
+    --bg-red-button: rgba(255, 0, 0, 1);
+    --black: #000;
+    --light-black: rgba(106, 106, 106, 1);
+    --light-gray: #D1D1D1;
+
+/*    var(--bg-lightcolor)
+      var(--bg-red-button)
+      var( --black)
+      var(--light-black)
+      var(--bg-darkcolor)
+      var(--light-gray)
+
+*/
+    --main-font: 'Nunito Sans', sans-serif;
 }
+
+body {
+    font-family: var(--main-font);
+}
+
+/*<----------------------------------button---------------------------------->*/
 
 .button-red {
     border-radius: 40px;
-    background-color: rgba(255, 0, 0, 1);
+    background-color: var(--bg-red-button);
     border: navajowhite;
-    color: #fff;
+    color: var(--bg-lightcolor);
     text-transform: uppercase;
     font-weight: 700;
     font-size: 16px;
@@ -17,13 +38,15 @@ body {
 
 .button-white {
     border-radius: 40px;
-    background-color: #fff;
+    background-color: var(--bg-lightcolor);
     border: navajowhite;
     color: rgba(255, 0, 0, 1);
     text-transform: uppercase;
     font-weight: 700;
     font-size: 16px;
 }
+
+/*<----------------------------------title---------------------------------->*/
 
 .section-title {
     margin-bottom: 35px;
@@ -37,7 +60,7 @@ body {
     content: "";
     width: 50px;
     height: 3px;
-    background: rgb(255, 0, 0);
+    background: var(--bg-red-button);
     display: block;
     position: absolute;
 }
@@ -52,9 +75,11 @@ body {
     top: 15px;
 }
 
+/*<----------------------------------header---------------------------------->*/
+
 .header {
     height: 90px;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
     z-index: 1;
     width: 100%;
@@ -72,6 +97,8 @@ body {
     height: 100%;
 }
 
+/*<----------------------------------logo---------------------------------->*/
+
 .logo {
     display: flex;
     align-items: center;
@@ -81,7 +108,7 @@ body {
     font-size: 35px;
     text-transform: uppercase;
     font-weight: 800;
-    color: rgba(255, 0, 0, 1);
+    color: var(--bg-red-button);
     margin-left: 10px;
     margin-right: 5px;
 }
@@ -90,8 +117,10 @@ body {
     font-size: 35px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #fff;
+    color: var(--bg-lightcolor);
 }
+
+/*<----------------------------------nav---------------------------------->*/
 
 .nav-list {
     display: flex;
@@ -103,12 +132,14 @@ body {
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 700;
-    color: #fff;
+    color: var(--bg-lightcolor);
 }
 
 .nav-list-link:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
+/*<----------------------------------banner---------------------------------->*/
 
 .banner {
     height: 100vh;
@@ -125,7 +156,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .banner .container {
@@ -138,7 +169,7 @@ body {
 
 .banner-title {
     font-size: 90px;
-    color: #fff;
+    color: var(--bg-lightcolor);
     font-weight: 800;
     text-transform: uppercase;
     line-height: 90px;
@@ -146,7 +177,7 @@ body {
 }
 
 .banner-text {
-    color: #fff;
+    color: var(--bg-lightcolor);
     font-size: 16px;
     font-weight: 700;
     text-align: center;
@@ -168,7 +199,7 @@ body {
 }
 
 .banner-button-down {
-    background: rgb(255, 0, 0);
+    background: var(--bg-red-button);
     border: none;
     padding: 17px;
     z-index: 1;
@@ -176,6 +207,8 @@ body {
     position: absolute;
     bottom: -28px;
 }
+
+/*<----------------------------------blog---------------------------------->*/
 
 .blog {
     margin-top: 91px;
@@ -189,7 +222,7 @@ body {
 }
 
 .blog .section-title {
-    color: #000;
+    color: var(--black);
 }
 
 .blog-boxes {
@@ -204,7 +237,7 @@ body {
 .blog-box-title {
     font-size: 19px;
     font-weight: 400;
-    color: rgba(106, 106, 106, 1);
+    color:  var(--light-black);
     margin-top: 25px;
     margin-bottom: 15px;
     text-transform: uppercase;
@@ -212,8 +245,8 @@ body {
 
 .blog-box-text {
     font-size: 14px;
-    color: rgba(106, 106, 106, 1);
-    font-family: 'Open Sans', sans-serif;
+    color:  var(--light-black);
+    font-family: var(--main-font);
     margin-bottom: 15px;
     width: 260px;
     font-weight: 200;
@@ -223,8 +256,10 @@ body {
     padding: 11px 29px;
 }
 
+/*<----------------------------------service---------------------------------->*/
+
 .service {
-    background-color: rgba(40, 39, 44, 1);
+    background-color: var(--bg-darkcolor);
 }
 
 .service .container {
@@ -236,7 +271,7 @@ body {
 }
 
 .service .section-title {
-    color: #fff;
+    color: var(--bg-lightcolor);
     margin-bottom: 75px;
 }
 
@@ -262,7 +297,7 @@ body {
     margin-bottom: 15px;
     font-size: 19px;
     font-weight: 400;
-    color: #fff;
+    color: var(--bg-lightcolor);
     text-transform: uppercase;
 }
 
@@ -279,3 +314,69 @@ body {
 .service-box-button {
     padding: 11px 29px;
 }
+
+/*<----------------------------------contact---------------------------------->*/
+
+.contact {
+    background-color: var(--bg-lightcolor);
+    margin-top: 88px;
+    margin-bottom: 100px;
+    text-align: center;
+    align-items: center;
+}
+
+.contact-boxs{
+    display: flex;
+
+}
+
+.contact-box{
+    width: 50%;
+
+}
+
+.contact-box-image{
+    width: 90%;
+    border-radius: 50% 20% / 10% 40%;
+/*    border-radius: 30px;*/
+    background: red;
+
+}
+
+
+/*--form--*/
+.contact-box-form{
+    width: 444px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.contact-form-input{
+    font-family: 'Nunito Sans', sans-serif;
+    width: 100%;
+    padding: 8px 12px;
+    border-radius: 8px;
+    border: 1px solid var(--light-gray);
+    font-size: 16px;
+    color: var(--light-black);
+    font-weight: 400;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+.contact-form-input-message {
+    height: 140px;
+}
+.contact-form-input:focus {
+    border: 1px solid #FF0000;
+    box-shadow: 0 1px 6px #FF00004D;
+}
+
+
+
+/*<----------------------------------footer---------------------------------->*/
+
+
+
+
