--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     margin-right: 45px;
 }
 
@@ -290,6 +291,8 @@ body {
     font-weight: 400;
     color: var(--bg-lightcolor);
     text-transform: uppercase;
+    min-height: 60px;
+   
 }
 
 .service-box-text {
@@ -300,6 +303,7 @@ body {
     color: rgba(178, 178, 178, 1);
     text-align: center;
     width: 231px;
+    min-height: 120px;
 }
 
 .service-box-button {
